Fix spacing
Use #root for spacing.
This will allow an easier iOS safe areas.

--- a/src/theme/_appbar.scss
+++ b/src/theme/_appbar.scss
@@ -44,5 +44,5 @@
 }
 
 #root {
-    padding-top: 8 * $unit;
+    padding: 8 * $unit $subunit 0 * $unit;
 }
