--- a/src/theme/_banner.scss
+++ b/src/theme/_banner.scss
@@ -6,7 +6,6 @@
 .banner {
     @include elevation-small();
     @include caption();
-    @include spacing-banner();
     @include spacing-y();
     background-color: $primary;
     border-radius: $border-radius;
