--- a/src/theme/_data_table.scss
+++ b/src/theme/_data_table.scss
@@ -5,6 +5,7 @@
 
 .data-table {
     border-collapse: collapse;
+    margin-bottom: $leading;
     width: 100%;
 }
 
